[package]
name = "smart2asm"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
quick-xml = { version = "0.37", features = ["serialize", "serde-types"] }
glob = "0.3"
anyhow = "1.0"
heck = "0.5"
bytemuck = { version = "1.21", features = ["min_const_generics"] }
itertools = "0.14"
minijinja = { version = "2.10", features = ["loader"] }