[package]
name = "smart2asm"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
quick-xml = { version = "0.37", features = ["serialize", "serde-types"] }
glob = "0.3"
anyhow = "1.0"
heck = "0.5"
bytemuck = { version = "1.21", features = ["min_const_generics", "extern_crate_alloc", "derive"] }
minijinja = { version = "2.10", features = ["loader"] }
bpaf = { version = "0.9.19", features = ["derive", "dull-color"] }
toml = "0.8.22"
hex = { version = "0.4.3", features = ["serde"]}
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }