[package]
name = "smart2asm"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
bpaf = { version = "0.9.19", features = ["derive", "dull-color"] }
bytemuck = { version = "1.21", features = ["min_const_generics", "extern_crate_alloc", "derive"] }
glob = "0.3"
heck = "0.5"
hex = { version = "0.4.3", features = ["serde"]}
indicatif = "0.18.0"
minijinja = { version = "2.10", features = ["loader"] }
quick-xml = { version = "0.38.1", features = ["serialize", "serde-types"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.9.5"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }